force-app/main/default/objects/Field_Display_Config__mdt/Field_Display_Config__mdt.object-meta.xml
<CustomObject>
    <label>Field Display Config</label>
    <pluralLabel>Field Display Configs</pluralLabel>
</CustomObject>