force-app/main/default/objects/Field_Display_Config__mdt/fields/Column_Label__c.field-meta.xml
<CustomField>
    <fullName>Column_Label__c</fullName>
    <label>Column Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>