force-app/main/default/objects/Field_Display_Config__mdt/fields/Is_Visible__c.field-meta.xml
<CustomField>
    <fullName>Is_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Visible?</label>
    <type>Checkbox</type>
</CustomField>