force-app/main/default/objects/Field_Display_Config__mdt/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <label>RecordType</label>
    <length>40</length>
    <type>Text</type>
</CustomField>