force-app/main/default/objects/Field_Display_Config__mdt/listViews/Fields_to_Office_RecordType.listView-meta.xml
<ListView>
    <fullName>Fields_to_Office_RecordType</fullName>
    <columns>DeveloperName</columns>
    <columns>Display_Order__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Column_Label__c</columns>
    <columns>Is_Visible__c</columns>
    <columns>RecordType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType__c</field>
        <operation>equals</operation>
        <value>Offices</value>
    </filters>
    <label>Fields to Office RecordType</label>
</ListView>